# Leyton_Orient_FC_Player_Stats

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  alembic.ini  cli_commands.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py  30d880905868_phase_5_archetypes.py  57dfd0b711cc_phase_4_player_percentiles_player_scores.py  7408bdfcd11f_core_schema_players_metrics_wage_.py  8298a17dd305_players_tm_player_id_for_profile_links.py  9a455e99c328_phase_6_valuations.py  bc5591accb97_phase_10_league_aware_wage_estimate_.py  bfde29b7bd77_phase_10b_skillcorner_physical_tables.py  c425fb38ba1f_player_bio_foot_contract_height.py  cdef4ad8fbaf_phase_7_wage_estimates_shortlists.py  e3f9ffc5dff5_watchlist_user_table.py
assets/: README.md
data/reference/: README.md  identity_profiles.csv  wage_estimates.csv  wage_framework.csv
docs/: architecture.md  methodology.md  scaling.md
pgadmin/: servers.json
plan/: BUILD_PLAN.md  LOFC_Recruitment_Platform_Build_Plan.md
src/lofc/: config.py  pipeline.py
src/lofc/aggregate/: events.py  player_season.py  run.py
src/lofc/constrain/: filters.py  run.py
src/lofc/dashboard/: app.py
src/lofc/ingest/: landing.py  run.py  skillcorner.py  statsbomb.py  transfermarkt.py  transfermarkt_efl.py
tests/: test_aggregate.py  test_archetypes.py  test_config.py  test_constrain.py  test_ingest.py  test_score.py  test_skillcorner.py  test_store.py  test_transfermarkt_efl.py  test_valuation.py  test_watchlist.py
(+11 files in other folders)
